[EFL][WK2] View is not focused when fullscreen mode toggled https://bugs.webkit.org/show_bug.cgi?id=113009

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2013-03-22
Reviewed by Laszlo Gombos.

Set focus on view when fullscreen mode enabled/disabled
by FullScreen API.

* MiniBrowser/efl/main.c:
(on_fullscreen_accept):
(on_fullscreen_deny):

Canonical link: https://commits.webkit.org/131361@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146581 268f45cc-cd09-0410-ab3c-d52691b4dbfc